# UA-5308-smtp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  default_config.json  docker-compose.yml
api-server/: ApiHandler.cpp  ApiHandler.h  ApiMain.cpp  ApiServer.cpp  ApiServer.h  CMakeLists.txt
api-server/tests/: ApiHandlerUnitTests.cpp  ApiServerStressTests.cpp  CMakeLists.txt
base64/: CMakeLists.txt
base64-rs/: Cargo.toml  build.rs  cbindgen.toml
base64/include/: AttachmentConfig.hpp  AttachmentHandler.hpp  Base64Common.hpp  Base64Decoder.hpp  Base64Encoder.hpp  Base64StreamDecoder.hpp  Base64StreamEncoder.hpp
base64/src/: AttachmentHandler.cpp  Base64Decoder.cpp  Base64Encoder.cpp  Base64StreamDecoder.cpp  Base64StreamEncoder.cpp
base64/tests/: CMakeLists.txt  tests.cpp
base64/utests/: CMakeLists.txt  tests.cpp
cmake/: CodeCoverage.cmake  (+1 more)
database/: .gitignore  CMakeLists.txt  ConnectionPool.cpp  ConnectionPool.h  DataBaseManager.cpp  DataBaseManager.h  Transaction.h  main.cpp  schema.h
database/DAL/: AttachmentDAL.cpp  AttachmentDAL.h  FolderDAL.cpp  FolderDAL.h  MessageDAL.cpp  MessageDAL.h  RecipientDAL.cpp  RecipientDAL.h  UserDAL.cpp  UserDAL.h
database/Entity/: Attachment.h  Folder.h  Message.cpp  Message.h  Recipient.cpp  Recipient.h  User.h  Users.cpp
database/Repository/: MessageRepository.cpp  MessageRepository.h  UserRepository.cpp  UserRepository.h
database/scheme/: 001_init_scheme.sql  smtp.db
database/tests/: CMakeLists.txt  TestAttachmentDAL.cpp  TestConcurrency.cpp  TestDAL.cpp  TestDataBaseManager.cpp  TestFixture.h  TestFolderDAL.cpp  TestHelper.h  TestMessageDAL.cpp  TestMessageRepository.cpp  TestRecipentDAL.cpp  TestRecipient.cpp  TestUserDAL.cpp  TestUserRepository.cpp
imap-server/: CMakeLists.txt  ImapMain.cpp  ImapParser.cpp  ImapServer.cpp  ImapServer.hpp  ImapSession.cpp  ImapSession.hpp  ImapUtils.cpp  imap-main.cpp  imap-server.cpp  imap-server.hpp  imap-session.cpp  imap-session.hpp  imap.config
imap-server/include/: ImapCommandDispatcher.hpp  ImapConfig.hpp  ImapServer.hpp  ImapSession.hpp
imap-server/src/: ImapCommandDispatcher.cpp  ImapConfig.cpp  ImapMain.cpp  ImapParser.cpp  ImapServer.cpp  ImapSession.cpp  ImapUtils.cpp
imap-server/tests/: CMakeLists.txt  ImapCommandHandlersTest.cpp  ImapCommandTest.cpp  ImapEncryptionHandshakeTest.cpp  ImapParserTest.cpp  ImapResponseTest.cpp  ImapSessionTest.cpp  ImapUtilsTest.cpp  TestMain.cpp
logger/: CMakeLists.txt  ConsoleStrategy.cpp  ConsoleStrategy.h  FileStrategy.cpp  FileStrategy.h  ILogger.h  ILoggerStrategy.h  Logger.cpp  Logger.h
logger/include/: ConsoleStrategy.h  FileStrategy.h  ILogger.h  ILoggerStrategy.h  IReadable.h  LockFreeLogger.h  Logger.h  LoggerConfig.h  Queue.h
logger/src/: ConsoleStrategy.cpp  FileStrategy.cpp  LockFreeLogger.cpp  Logger.cpp
logger/tests/: CMakeLists.txt  test_logger.cpp
mime/: CMakeLists.txt
mime/include/: Attachment.h  Email.h  MimeBuilder.h  MimeComposer.h  MimeDecoder.h  MimeEncoder.h  MimeParser.h  MimePart.h
mime/src/: MimeBuilder.cpp  MimeComposer.cpp  MimeDecoder.cpp  MimeEncoder.cpp  MimeParser.cpp
mime/tests/: CMakeLists.txt  MimeBuilderTest.cpp  MimeComposerTest.cpp  MimeDecoderTest.cpp  MimeEncoderTest.cpp  MimeParserTest.cpp  MockLogger.h
mime/utests/: CMakeLists.txt  MimeBuilderTest.cpp  MimeComposerTest.cpp  MimeDecoderTest.cpp  MimeEncoderTest.cpp  MimeParserTest.cpp  MockLogger.h
mua/: CMakeLists.txt  main.cpp  main.qml  mua_console_main.cpp
mua/bridge/: MuaBridge.cpp  MuaBridge.hpp
mua/core/: CommandQueue.cpp  CommandQueue.hpp  MailCommand.hpp  MailData.hpp  MailResult.hpp  MailWorker.cpp  MailWorker.hpp
mua/qml/: main.qml
mua/qml/Components/: ActionBtn.qml  EmailDelegate.qml  FilterModel.qml  MailListDelegate.qml  MailListView.qml  MailView.qml  NavType.qml  SidebarItem.qml  StyledCheckBox.qml  StyledInput.qml  SvgIcon.qml
mua/qml/Singleton/: Icons.qml  Theme.qml  ThemeData.js
mua/qml/Views/: ComposePopup.qml  EmailListView.qml  FilterPopup.qml  LoginView.qml  MailArea.qml  ReadMessagePopup.qml  Sidebar.qml  SignInView.qml  Toolbar.qml  TopSearchBar.qml
mua/tools/: delete_stress_users.cpp  seed_stress_users.cpp  seed_users.cpp
proto/: CMakeLists.txt  ClientSecureChannel.cpp  ClientSecureChannel.hpp  IConnection.hpp  ImapCommand.hpp  ImapConnection.hpp  ImapParser.hpp  ImapResponse.hpp  ImapSessionTypes.hpp  ImapUtils.hpp  PlainStream.h  SMTPClientSocket.h  SMTPResponseParser.h  SMTPServer.h  SMTPServerSession.h  SMTPServerSocket.h  SMTP_Types.h  SecureChannel.cpp  SecureChannel.hpp  SecureConnection.hpp  ServerSecureChannel.cpp  ServerSecureChannel.hpp  SmtpCommand.hpp  SmtpParser.hpp  SmtpResponse.hpp  SmtpSession.hpp  SocketAcceptor.cpp  SocketAcceptor.hpp  SocketConnection.cpp  SocketConnection.hpp  SocketConnector.cpp  SocketConnector.hpp  SslStream.h  encryption_test.cpp  test_SecureConnection.cpp
proto/include/: IStream.h  PlainStream.h  SMTPClientSocket.h  SMTPCommandParser.h  SMTPResponseParser.h  SMTPServerSocket.h  SMTP_Types.h  SslStream.h
proto/src/: SMTPClientSocket.cpp  SMTPCommandParser.cpp  SMTPResponseParser.cpp  SMTPServerSocket.cpp
proto/tests/: CMakeLists.txt  encryption_test.cpp  proto_unit_test.cpp  secure_channel_mock_test.cpp  test_proto.cpp
proto/tests/certs/: server.crt  server.key
server/: CMakeLists.txt  README.md  SMTPClientSocket.cpp  SMTPCommandParser.cpp  SMTPServer.cpp  SMTPServerSession.cpp  SMTPServerSocket.cpp  SecureConnection.cpp  SmtpParser.cpp  SmtpSession.cpp  SocketAcceptor.cpp  SocketAcceptor.hpp  SocketConnection.cpp  SocketConnection.hpp  SocketConnector.cpp  SocketConnector.hpp  server_main.cpp
server/include/: SMTPServer.h  SMTPServerSession.h
server/src/: SMTPServer.cpp  SMTPServerSession.cpp  server_main.cpp
server/tests/: CMakeLists.txt  SmtpParserTest.cpp  SmtpSessionTest.cpp  test_server.cpp
server/threadpool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  ThreadPoolTest.cpp
server/threadpool/tests/: CMakeLists.txt  ThreadPoolTest.cpp
(+45 files in other folders)
